Some changes to assignment 1