@@ -1,13 +1,11 @@
 package nl.vincenzo.pizzeria;
 
-import nl.vincenzo.pizzeria.model.Director;
-import nl.vincenzo.pizzeria.model.IPizzaBaker;
-import nl.vincenzo.pizzeria.model.MargeritaRecipe;
-import nl.vincenzo.pizzeria.model.OnionAndTunaRecipe;
-import nl.vincenzo.pizzeria.model.PizzaBaker;
+import nl.vincenzo.pizzeria.model.*;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -18,20 +16,23 @@ public class PizzeriaApplication {
 		SpringApplication.run(PizzeriaApplication.class, args);
 
 		Director director = new Director(getPizzaBakers());
-		director.allKindsOfPizza();
+		Set<IPizza> pizzaSet = director.allKindsOfPizza();
+
+		pizzaSet.stream()
+				.forEach(pizza -> pizza.eat());
 	}
 
 	public static List<IPizzaBaker> getPizzaBakers() {
 
 		PizzaBaker margeritaBaker = PizzaBaker.PizzaBakerBuilder.aPizzaBaker()
-				.withPizzaSkills(Set.of(new MargeritaRecipe()))
+				.withPizzaSkills(new HashSet<>(Arrays.asList(new MargeritaRecipe())))
 				.build();
 
 		PizzaBaker onionTunaBaker = PizzaBaker.PizzaBakerBuilder.aPizzaBaker()
-				.withPizzaSkills(Set.of(new OnionAndTunaRecipe()))
+				.withPizzaSkills(new HashSet<>(Arrays.asList(new OnionAndTunaRecipe())))
 				.build();
 
-		return List.of(margeritaBaker, onionTunaBaker);
+		return Arrays.asList(margeritaBaker, onionTunaBaker);
 	}
 
 
